2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Require at least Boost 1.37.
	* configure.ac: Check that Boost version is newer
	than 1.37 to allow the use of make_shared.

2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix buildchain.
	* Makefile.am: Remove useless rules.

2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Add sections into Problem class.
	* include/roboptim/core/problem.hh: Here.

2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix implementation.
	* include/roboptim/core/problem.hxx: Here.
	* tests/simple.stdout: Regenerate.

2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Display initial constraints values.
	* include/roboptim/core/problem.hxx: Display constraints initial values.
	* src/result.cc: Restyle.
	* tests/simple.stdout: Regenerate.

2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Update forward declarations.
	* include/roboptim/core/fwd.hh: Add ConstantFunction.

2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Generalize addConstraint.
	* include/roboptim/core/problem.hh,
	* include/roboptim/core/problem.hxx:
	Modify addConstraint in order to let the user
	choose how a constraint should be considered
	(example: consider a constraint as a linear or
	as a non-linear function).

2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Add constant function.
	* include/Makefile.am: Distribute new headers.
	* include/roboptim/core/constant-function.hh: New.
	* src/Makefile.am: Compile constant function.
	* src/constant-function.cc: New.
	* tests/Makefile.am: Add constant function test.
	* tests/constant-function.cc: New.
	* tests/constant-function.stdout: New.
	* tests/problem-cc.cc: Use constant function.
	* tests/testsuite.at: Run test suite.

2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Generalize constraint storage.
	* include/roboptim/core/plugin/dummy.hh: Use new syntax
	to specify constraints types.
	* include/roboptim/core/problem.hh,